test/files/neg/t591.check
t591.scala:40: error: method input_= is defined twice;
  the conflicting variable input was defined at line 35:18
    def input_=(in : Input) = {}
        ^
one error found
